# Bindery

./: .gitignore  BUILD_REPORT.md  CODE_REVIEW.md  DESIGN.md  README.md  TEST_RESULTS.md  USAGE.md  analysis_report.md  bindery_ai_longform_harness_instruction_prompt.md  bindery_ux_autopilot_dev_prompt.txt  bindery_ux_autopilot_pipeline_plan.md  index.html  log.md  package-lock.json  package.json  phase2_backlog.md  plan.md  state.md  tsconfig.json  vite.config.ts
.claude/: launch.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: analysis.rs  files.rs  git.rs  mod.rs  novelctl.rs  path_utils.rs  project.rs  snapshots.rs  style.rs
design_v0.2/: 00_MASTER_INDEX.md  README.md
docs/: AI_PIPELINE_OBSERVABILITY_UX_PLAN_20260704.md  AI_PIPELINE_VALIDATION_20260702.md  AI_PROJECT_PIPELINE_FLOW_20260704.md  AI_WRITING_PIPELINE_FLOW_20260703.md  BINDERY_STUDIO_CONCEPT.md  CHANGELOG.md  COMPETITIVE_ANALYSIS_stage3_9.md  DECISIONS.md  DEPLOY_CSP.md  GAP_ANALYSIS_A_TO_Z_20260703.md  GAP_REVIEW_stage3_7.md  MAC_BUILD.md  NAME_IDEAS.md  OPERATION_MANUAL.md  PRODUCT_READINESS_REVIEW_20260707.md  PROJECT_STATUS.md  PROMPT_CAPSULE.md  SCENE_CLASSIFICATION.md  STAGE315_IMPLEMENTATION_REPORT.md  STANDALONE_EXE.md  STYLE_ANALYSIS_METHOD.md  STYLE_ROUTER.md  STYLE_SKILL_EXPORT.md  STYLE_STACK_SCHEMA.md  STYLE_SYSTEM.md  TASKS.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+372 files in other folders)
