[package]
name = "bindery"
version = "0.1.0"
description = "Bindery local-first AI longform novel writing harness"
authors = ["EiraWorks"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
